[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/Game/GameMaster.gd" type="Script" id=1]
[ext_resource path="res://scene/Game/Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/Game/Interractive/ButtonTutoL.gd" type="Script" id=3]
[ext_resource path="res://scripts/Game/Interractive/ButtonL0E.gd" type="Script" id=4]
[ext_resource path="res://scripts/Game/Interractive/ButtonL1E.gd" type="Script" id=5]
[ext_resource path="res://assets/img/Tiles1.png" type="Texture" id=6]
[ext_resource path="res://scene/Game/player.tscn" type="PackedScene" id=7]
[ext_resource path="res://scene/Game/LevelsChange.tscn" type="PackedScene" id=8]
[ext_resource path="res://scene/Game/Tuto Label.tscn" type="PackedScene" id=9]

[sub_resource type="TileSet" id=1]
0/name = "Tiles1.png 0"
0/texture = ExtResource( 6 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [  ]
0/z_index = 0
1/name = "Tiles1.png 1"
1/texture = ExtResource( 6 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 192, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [  ]
1/z_index = 0
2/name = "Tiles1.png 2"
2/texture = ExtResource( 6 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 64, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shapes = [  ]
2/z_index = 0
3/name = "Tiles1.png 3"
3/texture = ExtResource( 6 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 64, 64, 64, 64 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shapes = [  ]
3/z_index = 0
4/name = "Tiles1.png 4"
4/texture = ExtResource( 6 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 128, 64, 64, 64 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shapes = [  ]
4/z_index = 0
5/name = "Tiles1.png 5"
5/texture = ExtResource( 6 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 192, 64, 64, 64 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shapes = [  ]
5/z_index = 0
6/name = "Tiles1.png 6"
6/texture = ExtResource( 6 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 128, 64, 64 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shapes = [  ]
6/z_index = 0
7/name = "Tiles1.png 7"
7/texture = ExtResource( 6 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 0, 192, 64, 64 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shapes = [  ]
7/z_index = 0
8/name = "Tiles1.png 8"
8/texture = ExtResource( 6 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 64, 192, 64, 64 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shapes = [  ]
8/z_index = 0
9/name = "Tiles1.png 9"
9/texture = ExtResource( 6 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 128, 192, 64, 64 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shapes = [  ]
9/z_index = 0

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Node2D" parent="."]

[node name="ButtonTutoL" parent="Button" instance=ExtResource( 2 )]
position = Vector2( 4960, 992 )
script = ExtResource( 3 )

[node name="ButtonL0E" parent="Button" instance=ExtResource( 2 )]
position = Vector2( 160, 416 )
script = ExtResource( 4 )
targets_nodes = [ NodePath("../../TileMap") ]

[node name="ButtonL1E" parent="Button" instance=ExtResource( 2 )]
position = Vector2( 1184, 1632 )
script = ExtResource( 5 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 55, 1, 0, 56, 1, 0, 57, 1, 0, 58, 1, 0, 59, 1, 0, 60, 1, 0, 61, 1, 0, 62, 1, 0, 63, 1, 0, 64, 1, 0, 65, 1, 0, 66, 1, 0, 67, 1, 0, 68, 1, 0, 69, 1, 0, 70, 1, 0, 71, 1, 0, 72, 1, 0, 73, 1, 0, 74, 1, 0, 75, 1, 0, 76, 1, 0, 77, 1, 0, 78, 1, 0, 79, 1, 0, 80, 1, 0, 81, 1, 0, 65536, 1, 0, 65540, 1, 0, 65544, 1, 0, 65548, 1, 0, 65591, 1, 0, 65605, 2, 0, 65617, 1, 0, 131072, 1, 0, 131076, 2, 0, 131078, 9, 0, 131080, 6, 0, 131084, 1, 0, 131127, 1, 0, 131141, 2, 0, 131153, 1, 0, 196608, 1, 0, 196612, 1, 0, 196616, 1, 0, 196620, 1, 0, 196663, 1, 0, 196677, 2, 0, 196689, 1, 0, 262144, 1, 0, 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262154, 4, 0, 262155, 1, 0, 262156, 1, 0, 262199, 1, 0, 262213, 2, 0, 262225, 1, 0, 327680, 1, 0, 327684, 4, 0, 327687, 1, 0, 327688, 1, 0, 327689, 1, 0, 327692, 1, 0, 327735, 1, 0, 327749, 2, 0, 327761, 1, 0, 393216, 1, 0, 393220, 1, 0, 393223, 1, 0, 393228, 1, 0, 393271, 1, 0, 393272, 1, 0, 393273, 1, 0, 393274, 1, 0, 393275, 1, 0, 393276, 1, 0, 393277, 1, 0, 393278, 1, 0, 393279, 1, 0, 393280, 1, 0, 393281, 1, 0, 393282, 1, 0, 393283, 1, 0, 393284, 1, 0, 393285, 1, 0, 393286, 1, 0, 393287, 1, 0, 393288, 1, 0, 393289, 1, 0, 393290, 1, 0, 393291, 6, 0, 393292, 1, 0, 393293, 1, 0, 393294, 1, 0, 393295, 1, 0, 393296, 1, 0, 393297, 1, 0, 458752, 1, 0, 458756, 1, 0, 458759, 6, 0, 458761, 1, 0, 458764, 1, 0, 458807, 1, 0, 458813, 7, 0, 458822, 3, 0, 458826, 9, 0, 458828, 1, 0, 524288, 1, 0, 524289, 1, 0, 524290, 1, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 1, 0, 524343, 1, 0, 524349, 7, 0, 524358, 3, 0, 524362, 9, 0, 524364, 1, 0, 589824, 1, 0, 589828, 1, 0, 589879, 1, 0, 589885, 4, 0, 589887, 6, 0, 589894, 3, 0, 589898, 9, 0, 589899, 9, 0, 589900, 1, 0, 655360, 1, 0, 655364, 1, 0, 655415, 1, 0, 655421, 7, 0, 655430, 3, 0, 655436, 1, 0, 720896, 1, 0, 720900, 1, 0, 720951, 1, 0, 720957, 7, 0, 720966, 3, 0, 720972, 1, 0, 786432, 1, 0, 786436, 1, 0, 786487, 1, 0, 786493, 7, 0, 786494, 7, 0, 786495, 7, 0, 786496, 1, 0, 786497, 1, 0, 786498, 1, 0, 786499, 1, 0, 786500, 1, 0, 786501, 1, 0, 786502, 1, 0, 786503, 1, 0, 786504, 1, 0, 786505, 1, 0, 786506, 1, 0, 786507, 1, 0, 786508, 1, 0, 786509, 1, 0, 786510, 1, 0, 851968, 1, 0, 851972, 1, 0, 852023, 1, 0, 852032, 7, 0, 852040, 8, 0, 852046, 1, 0, 917504, 1, 0, 917508, 1, 0, 917559, 1, 0, 917568, 7, 0, 917576, 8, 0, 917582, 1, 0, 983040, 1, 0, 983044, 1, 0, 983095, 1, 0, 983104, 7, 0, 983112, 8, 0, 983118, 1, 0, 1048576, 1, 0, 1048580, 1, 0, 1048581, 1, 0, 1048582, 1, 0, 1048583, 1, 0, 1048584, 1, 0, 1048631, 1, 0, 1048640, 7, 0, 1048648, 8, 0, 1048654, 1, 0, 1114112, 1, 0, 1114116, 9, 0, 1114117, 6, 0, 1114118, 4, 0, 1114119, 6, 0, 1114120, 1, 0, 1114167, 1, 0, 1114176, 7, 0, 1114184, 8, 0, 1114190, 1, 0, 1179648, 1, 0, 1179653, 1, 0, 1179656, 1, 0, 1179703, 1, 0, 1179704, 1, 0, 1179705, 1, 0, 1179706, 1, 0, 1179707, 1, 0, 1179708, 1, 0, 1179709, 1, 0, 1179710, 1, 0, 1179711, 1, 0, 1179712, 1, 0, 1179713, 1, 0, 1179714, 1, 0, 1179715, 1, 0, 1179716, 1, 0, 1179717, 1, 0, 1179718, 1, 0, 1179719, 1, 0, 1179720, 1, 0, 1179721, 1, 0, 1179722, 1, 0, 1179723, 1, 0, 1179724, 1, 0, 1179725, 1, 0, 1179726, 1, 0, 1245184, 1, 0, 1245189, 1, 0, 1245190, 4, 0, 1245192, 1, 0, 1310720, 1, 0, 1310721, 1, 0, 1310722, 1, 0, 1310723, 1, 0, 1310724, 1, 0, 1310725, 1, 0, 1310726, 8, 0, 1310727, 1, 0, 1310728, 1, 0, 1376256, 1, 0, 1376257, 1, 0, 1376258, 1, 0, 1376259, 1, 0, 1376260, 1, 0, 1376261, 1, 0, 1376262, 3, 0, 1376263, 1, 0, 1376264, 1, 0, 1376266, 1, 0, 1376267, 1, 0, 1376268, 1, 0, 1376269, 1, 0, 1376270, 1, 0, 1376271, 1, 0, 1376272, 1, 0, 1441792, 1, 0, 1441800, 7, 0, 1441802, 1, 0, 1441806, 4, 0, 1441808, 1, 0, 1507328, 1, 0, 1507336, 7, 0, 1507337, 1, 0, 1507338, 1, 0, 1507342, 1, 0, 1507344, 1, 0, 1507345, 1, 0, 1507346, 1, 0, 1507347, 1, 0, 1507348, 1, 0, 1572864, 1, 0, 1572865, 1, 0, 1572867, 1, 0, 1572868, 1, 0, 1572874, 1, 0, 1572878, 1, 0, 1572880, 1, 0, 1572884, 1, 0, 1638400, 1, 0, 1638401, 6, 0, 1638402, 6, 0, 1638404, 9, 0, 1638408, 4, 0, 1638409, 4, 0, 1638412, 1, 0, 1638413, 6, 0, 1638414, 9, 0, 1638415, 6, 0, 1638416, 9, 0, 1638420, 1, 0, 1703936, 1, 0, 1703937, 1, 0, 1703938, 1, 0, 1703939, 1, 0, 1703940, 1, 0, 1703941, 1, 0, 1703942, 1, 0, 1703943, 1, 0, 1703944, 1, 0, 1703945, 1, 0, 1703946, 1, 0, 1703947, 1, 0, 1703948, 1, 0, 1703949, 1, 0, 1703950, 1, 0, 1703951, 1, 0, 1703952, 1, 0, 1703956, 1, 0, 1769488, 1, 0, 1769489, 1, 0, 1769490, 1, 0, 1769491, 1, 0, 1769492, 1, 0, 1835024, 1, 0, 1835028, 1, 0, 1900560, 1, 0, 1900564, 1, 0, 1966096, 1, 0, 1966097, 1, 0, 1966098, 1, 0, 1966099, 1, 0, 1966100, 1, 0 )

[node name="Player" parent="." instance=ExtResource( 7 )]
position = Vector2( 160, 160 )

[node name="LevelsChange" parent="." instance=ExtResource( 8 )]

[node name="Tuto Label" parent="." instance=ExtResource( 9 )]
position = Vector2( 3520, 0 )

[connection signal="move" from="." to="Player" method="_on_Game_move"]
[connection signal="re_check_buttonL0E" from="." to="Button/ButtonL0E" method="_on_Game_re_check_buttonL0E"]
[connection signal="re_check_buttonTutoL" from="." to="Button/ButtonTutoL" method="_on_Game_re_check_buttonTutoL"]
[connection signal="re_cherk_move" from="." to="Player" method="_on_Node2D_re_cherk_move"]
[connection signal="active" from="Button/ButtonTutoL" to="." method="_on_ButtonTutoL_active"]
[connection signal="check_player" from="Button/ButtonTutoL" to="." method="_on_ButtonTutoL_check_player"]
[connection signal="active" from="Button/ButtonL0E" to="." method="_on_ButtonL0E_active"]
[connection signal="check_player" from="Button/ButtonL0E" to="." method="_on_ButtonL0E_check_player"]
[connection signal="active" from="Button/ButtonL1E" to="." method="_on_ButtonL1E_active"]
[connection signal="check_player" from="Button/ButtonL1E" to="." method="_on_ButtonL1E_check_player"]
[connection signal="TutoNo" from="Player" to="." method="_on_Player_TutoNo"]
[connection signal="TutoYes" from="Player" to="." method="_on_Player_TutoYes"]
[connection signal="check_move" from="Player" to="." method="_on_KinematicBody2D_check_move"]
[connection signal="drag_object" from="Player" to="." method="_on_KinematicBody2D_drag_object"]
